[package]
name = "deribit_quotes_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite =  {version = "0.17.2", features = ["native-tls"]}
serde_json = "1.0.82"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
